# pypasta

./: .gitignore  README.md  conftest.py  example.json  example1.json  example2.json  example4.json  example5.json  pyproject.toml
examples/: example1.json  example2.json  example4.json  example5.json  lfos.json  with_drums.json
pypastator/: __main__.py  constants.py  main.py  testfont.py  testmidi.py
pypastator/engine/: arp.py  base.py  chord.py  engine.py  field.py  lfo.py  melobase.py  melostep.py  melotor.py  presets.py  session.py  strum.py  track.py  utils.py
pypastator/tests/: test_gravity.py  test_melostep.py  test_melotor.py  test_utils.py
pypastator/widgets/: __init__.py  knob.py  label.py  labeled.py  led.py  menu.py  message.py  separator.py  slider.py  vertslider.py
pypastator/widgets/gui/: base.py  engine.py  mouse.py  row.py  session.py  settings.py
pypastator/widgets/gui/settings/: loadsong.py  mididevice.py  modalgui.py  renamesong.py  settingsgui.py
songs/: README.txt
tests/: test_gravity.py
