[tool.poetry]
name = "pypastator"
version = "0.1.0"
description = ""
authors = ["Ghislain Lévêque <ghislain@leveque.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
python-freetype = "^0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
