[tool.poetry]
name = "pypastator"
version = "0.1.0"
description = ""
authors = ["Ghislain Lévêque <ghislain@leveque.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
python-freetype = "^0.6"
faker = "^15.3.4"
python-slugify = "^7.0.0"
isort = "^5.11.3"
pylint = "^2.15.9"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
