[tool.poetry]
name = "pypastator"
version = "0.1.0"
description = ""
authors = ["Ghislain Lévêque <ghislain@leveque.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^2.3.0"
faker = "^18.3.1"
slugify = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
